DOMjudge Programming Contest Judging System

Version 5.2.0 - DEV
-------------------
 - [security] bind PHP session cookie to specific web URI to prevent
   sharing sessions between different websites on the same host.
 - Allow team to download testcase data marked as 'sample'.
 - Add icons to menu bars.
 - Allow to filter submissions on team, problem, language.
 - Show when a problem can not be judged on any judgehost.
 - Use current contest as default when uploading problem archive.
 - Allow to add user during team creation in UI.
 - Make problem texts always downloadable for jury.
 - Decode HTML entities for proper display of error messages in
   submit client.
 - The event feed and REST API now comply with ICPC WF 2016 specs.
 - Disallow deleting a judgehost that has performed judgings,
   since the dangling reference from the judging table makes
   submissions being rejudged again.
 - Performance: merge jury and public versions of cache database
   tables into single tables. Please refresh scoreboard cache after
   upgrade.
 - Make Linux cgroups a requirement: running Java without it has
   become too painful with memory overheads, also when compiling.
 - Add 'output-limit' verdict.
 - Renamed dj-setup-database to dj_setup_database for consistency
   with other script names.
 - Update ACE editor to version 1.2.3, jQuery to version 2.2.4.
 - Implement better password hashing (#237 thanks Bert Peters).
 - Allow float timelimits (#235).

Version 5.1.0 - 7 December 2015
-------------------------------
 - Minimum PHP version is now 5.4.
 - Minimum MySQL/MariaDB version is now 5.5.3.
 - More pervasive UTF-8 support.
   Also introduces new DJ_MYSQL_COLLATION configuration setting.
 - Remove CHROOT_SCRIPT configuration setting: automatically run
   chroot-startstop.sh if a pre-built chroot tree is found.
 - Update ACE editor to version 1.2.2, JScolor to version 1.4.5.
 - Support microsecond resolution contest times and timezones.