@@ -4,6 +4,8 @@ Version 5.2.0 - DEV
 -------------------
  - [security] bind PHP session cookie to specific web URI to prevent
    sharing sessions between different websites on the same host.
+ - [security] Add RUNGROUP configure setting to make sure that submissions
+   do not have access to group root files. (#250 thanks Richard Lobb)
  - Allow team to download testcase data marked as 'sample'.
  - Add icons to menu bars.
  - Allow to filter submissions on team, problem, language.
